switch back to alacritty and lsp cmp disable

--- a/hyprland/.config/waybar/style.css
+++ b/hyprland/.config/waybar/style.css
@@ -1,34 +1,29 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: "Noto Sans Regular", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+    font-family: "Noto Sans Mono Medium", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
     font-size: 16px;
     min-height: 0;
 }
 
 window#waybar {
-    background: rgba(0, 0, 0, 0.2);
-    color: white;
+    background: rgba(0, 0, 0, 0.3);
+    color: #dddddd;
 }
 
 #workspaces button {
     padding: 0 9px;
-    color: white;
+    color: #dddddd;
     border-bottom: 2px solid transparent;
 }
 
 #workspaces button.active {
     background: rgba(255, 255, 255, 0.12);
-    border-bottom: 2px solid white;
+    border-bottom: 2px solid #dddddd;
 }
 
 #workspaces button:hover {
     background: rgba(255, 255, 255, 0.12);
-}
-
-#mode {
-    background: #64727D;
-    border-bottom: 3px solid white;
 }
 
 #clock, #battery, #cpu, #memory, #disk, #network, #pulseaudio, #custom-spotify, #tray, #mode {
