--- a/hyprland/.config/waybar/style.css
+++ b/hyprland/.config/waybar/style.css
@@ -1,7 +1,7 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: "Noto Sans Mono Medium", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+    font-family: "Fira Code", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
     font-size: 16px;
     min-height: 0;
 }
